--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -1,16 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/black"
+    android:animateLayoutChanges="true"
     tools:context=".SplashActivity">
 
     <ImageView
-        android:layout_width="216dp"
-        android:layout_height="72.31dp"
+        android:id="@+id/iv_kresna_logo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="216dp"
+        android:layout_marginRight="216dp"
         android:src="@drawable/kresna_logo"
-        android:layout_gravity="center"/>
+        android:scaleType="centerInside"
+        android:layout_centerInParent="true"/>
 
-</FrameLayout>
+    <Button
+        android:id="@+id/btn_mulai"
+        android:layout_width="148dp"
+        android:layout_height="36dp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_margin="48dp"
+        android:text="Mulai"
+        android:textAllCaps="false"
+        android:background="@drawable/rounded_button_full_kresna_cream"
+        android:visibility="invisible"/>
+
+</RelativeLayout>
