--- a/app/src/main/res/layout/activity_select_difficulty.xml
+++ b/app/src/main/res/layout/activity_select_difficulty.xml
@@ -12,47 +12,57 @@
         android:layout_width="96dp"
         android:layout_height="32.26dp"
         android:layout_margin="24dp"
-        android:src="@drawable/kresna_logo"/>
+        android:src="@drawable/kresna_logo" />
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:orientation="vertical">
+
         <TextView
             android:id="@+id/tv_pilih"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:text="Pilih tingkat kesulitan: "
-            android:textColor="@color/kresna_cream"
             android:textAlignment="center"
-            android:layout_gravity="center"/>
+            android:textColor="@color/kresna_cream" />
 
         <GridLayout
             android:id="@+id/gl_difficulty"
             android:layout_width="wrap_content"
             android:layout_height="144dp"
+            android:layout_gravity="center_horizontal"
             android:layout_marginTop="24dp"
-            android:layout_marginBottom="24dp">
-            <Button
+            android:layout_marginBottom="24dp"
+            android:orientation="vertical">
+
+            <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/btn_easy"
-                android:layout_width="100dp"
-                android:layout_height="match_parent"
+                android:layout_width="256dp"
+                android:layout_height="36dp"
+                android:background="@drawable/rounded_button_selector"
                 android:text="@string/easy" />
 
-            <Button
+            <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/btn_medium"
-                android:layout_width="100dp"
-                android:layout_height="match_parent"
-                android:layout_marginLeft="36dp"
-                android:layout_marginRight="36dp"
-                android:text="@string/medium" />
+                android:layout_width="256dp"
+                android:layout_height="36dp"
+                android:layout_marginTop="12dp"
+                android:layout_marginBottom="12dp"
+                android:background="@drawable/rounded_button_selector"
+                android:text="@string/medium"
+                android:enabled="false"/>
 
-            <Button
+            <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/btn_hard"
-                android:layout_width="100dp"
-                android:layout_height="match_parent"
-                android:text="@string/hard"/>
+                android:layout_width="256dp"
+                android:layout_height="36dp"
+                android:background="@drawable/rounded_button_selector"
+                android:text="@string/hard"
+                android:enabled="false"
+                />
         </GridLayout>
     </LinearLayout>
 
