--- a/app/src/main/res/layout/activity_soal_gambar_jawaban_text.xml
+++ b/app/src/main/res/layout/activity_soal_gambar_jawaban_text.xml
@@ -66,7 +66,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:scaleType="centerInside"
-                android:src="@drawable/qae1"/>
+                android:src="@drawable/qne1"/>
         </androidx.cardview.widget.CardView>
 
 
@@ -80,7 +80,7 @@
             android:layout_marginRight="64dp"
             android:layout_marginBottom="64dp"
             android:layout_toRightOf="@+id/cv_soal"
-            android:columnCount="2">
+            android:columnCount="1">
 
             <androidx.cardview.widget.CardView
                 android:layout_width="1dp"
@@ -102,7 +102,9 @@
                     android:layout_margin="2dp"
                     android:background="@color/kresna_cream"
                     android:scaleType="centerInside"
-                    android:text="option1" />
+                    android:text="1"
+                    android:textSize="24dp"
+                    android:textStyle="bold"/>
             </androidx.cardview.widget.CardView>
 
             <androidx.cardview.widget.CardView
@@ -125,53 +127,9 @@
                     android:layout_margin="2dp"
                     android:background="@color/kresna_cream"
                     android:scaleType="centerInside"
-                    android:text="option2" />
-            </androidx.cardview.widget.CardView>
-
-            <androidx.cardview.widget.CardView
-                android:layout_width="1dp"
-                android:layout_height="1dp"
-                android:layout_rowWeight="1"
-                android:layout_columnWeight="1"
-                android:layout_margin="2dp">
-
-                <ImageView
-                    android:id="@+id/btn_option3_indicator"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:background="@android:color/holo_red_dark" />
-
-                <Button
-                    android:id="@+id/btn_option3"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_margin="2dp"
-                    android:background="@color/kresna_cream"
-                    android:scaleType="centerInside"
-                    android:text="option3" />
-            </androidx.cardview.widget.CardView>
-
-            <androidx.cardview.widget.CardView
-                android:layout_width="1dp"
-                android:layout_height="1dp"
-                android:layout_rowWeight="1"
-                android:layout_columnWeight="1"
-                android:layout_margin="2dp">
-
-                <ImageView
-                    android:id="@+id/btn_option4_indicator"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:background="@android:color/holo_red_dark" />
-
-                <Button
-                    android:id="@+id/btn_option4"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_margin="2dp"
-                    android:background="@color/kresna_cream"
-                    android:scaleType="centerInside"
-                    android:text="option4" />
+                    android:text="2"
+                    android:textSize="24dp"
+                    android:textStyle="bold" />
             </androidx.cardview.widget.CardView>
         </GridLayout>
     </GridLayout>
