--- a/app/src/main/res/layout/activity_soal_text_jawaban_text.xml
+++ b/app/src/main/res/layout/activity_soal_text_jawaban_text.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@color/black"
     android:orientation="vertical"
-    tools:context=".LearnNumberActivity">
+    tools:context=".SoalTextJawabanTextActivity">
 
     <ImageView
         android:id="@+id/iv_kresna_logo"
@@ -64,12 +64,12 @@
             <TextView
                 android:id="@+id/tv_soal"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_margin="24dp"
-                android:gravity="center"
-                android:text="10"
-                android:textColor="@android:color/holo_red_dark"
-                android:textSize="48dp"
+                android:layout_gravity="center"
+                android:text="Ayah membeli Bingka 5 biji, 2 biji Bingka dimakan Ibu, berapa sisa biji Bingka yang ada ?"
+                android:textColor="@android:color/black"
+                android:textSize="12dp"
                 android:textStyle="bold" />
         </androidx.cardview.widget.CardView>
 
@@ -99,14 +99,16 @@
                     android:layout_height="match_parent"
                     android:background="@android:color/holo_red_dark" />
 
-                <ImageButton
+                <Button
                     android:id="@+id/btn_option1"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_margin="2dp"
                     android:background="@color/kresna_cream"
                     android:scaleType="centerInside"
-                    android:text="option1" />
+                    android:text="1"
+                    android:textSize="24dp"
+                    android:textStyle="bold"/>
             </androidx.cardview.widget.CardView>
 
             <androidx.cardview.widget.CardView
@@ -122,14 +124,16 @@
                     android:layout_height="match_parent"
                     android:background="@android:color/holo_red_dark" />
 
-                <ImageButton
+                <Button
                     android:id="@+id/btn_option2"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_margin="2dp"
                     android:background="@color/kresna_cream"
                     android:scaleType="centerInside"
-                    android:text="option1" />
+                    android:text="2"
+                    android:textSize="24dp"
+                    android:textStyle="bold" />
             </androidx.cardview.widget.CardView>
         </GridLayout>
     </GridLayout>
