--- a/app/src/main/res/layout/activity_dialog_box.xml
+++ b/app/src/main/res/layout/activity_dialog_box.xml
@@ -23,6 +23,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
             <Button
+                android:id="@+id/btn_yes"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="4dp"
@@ -30,6 +31,7 @@
                 android:text="ya"
                 android:textColor="@color/kresna_cream"/>
             <Button
+                android:id="@+id/btn_no"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="4dp"
